# s3-browser-tool

./: .gitignore  Cargo.toml  README.md
assets/: make_icon.py
scripts/: bundle.sh
src/: lib.rs  main.rs
